@@ -59,5 +59,7 @@
 #define PFDEF_QUESTCOUNT        0
 #define PFDEF_COMPQUESTS        0
 #define PFDEF_CURRQUEST         NOTHING
+#define PFDEF_LASTMOTD          0 
+#define PFDEF_LASTNEWS          0 
 
 #endif /* _PFDEFAULTS_H_ */
