@@ -19,6 +19,9 @@
 #include "boards.h"
 #include "mail.h"
 
+SPECIAL(questmaster); 
+SPECIAL(shop_keeper);
+
 /* local (file scope only) functions */
 static void ASSIGNROOM(room_vnum room, SPECIAL(fname));
 static void ASSIGNMOB(mob_vnum mob, SPECIAL(fname));
@@ -161,3 +164,41 @@ void assign_rooms(void)
       if (ROOM_FLAGGED(i, ROOM_DEATH))
 	world[i].func = dump;
 }
+
+struct spec_func_data { 
+   char *name; 
+   SPECIAL(*func); 
+}; 
+
+struct spec_func_data spec_func_list[] = { 
+  {"Mayor",          mayor }, 
+  {"Snake",          snake }, 
+  {"Thief",          thief }, 
+  {"Magic User",     magic_user }, 
+  {"Puff",           puff }, 
+  {"Fido",           fido }, 
+  {"Janitor",        janitor }, 
+  {"Cityguard",      cityguard }, 
+  {"Postmaster",     postmaster }, 
+  {"Receptionist",   receptionist }, 
+  {"Cryogenicist",   cryogenicist}, 
+  {"Bulletin Board", gen_board }, 
+  {"Bank",           bank }, 
+  {"Pet Shop",       pet_shops }, 
+  {"Dump",           dump }, 
+  {"Guildmaster",    guild }, 
+  {"Guild Guard",    guild_guard }, 
+  {"Questmaster",    questmaster }, 
+  {"Shopkeeper",     shop_keeper }, 
+  {"\n", NULL} 
+}; 
+
+const char *get_spec_func_name(SPECIAL(*func)) 
+{ 
+  int i; 
+  for (i=0; *(spec_func_list[i].name) != '\n'; i++) { 
+    if (func == spec_func_list[i].func) return (spec_func_list[i].name); 
+  } 
+  return NULL; 
+} 
+
