@@ -910,6 +910,8 @@ struct player_special_data_saved
   int    current_quest;         /**< vnum of current quest         */
   int    quest_time;            /**< time left on current quest    */
   int    quest_counter;         /**< Count of targets left to get  */
+  time_t   lastmotd;            /**< Last time player read motd */
+  time_t   lastnews;            /**< Last time player read news */
 };
 
 /** Specials needed only by PCs, not NPCs.  Space for this structure is
